force-app/main/default/objects/Shift__c/Shift__c.object-meta.xml
<CustomObject>
    <label>Shift</label>
    <nameField>
        <displayFormat>Sh-{00000}</displayFormat>
        <label>Shift Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>