force-app/main/default/objects/Shift__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End</label>
    <type>Time</type>
</CustomField>