force-app/main/default/objects/Shift__c/fields/Pod__c.field-meta.xml
<CustomField>
    <fullName>Pod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pod</label>
    <referenceTo>Booth__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>