force-app/main/default/objects/Shift__c/fields/Shift_Order__c.field-meta.xml
<CustomField>
    <fullName>Shift_Order__c</fullName>
    <label>Shift Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>